# TMSParser

./: .gitignore  README.md  app.py  books.json  family.json  games.json  movies.json  pyproject.toml
parser/: base.py  tms.py
