[tool.poetry]
name = "parsertms"
version = "0.1.0"
description = ""
authors = ["Milana.Avtukh <Milana.Avtukh@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

